Minor Adjustment - Fix heading alignment on homepage

--- a/style.css
+++ b/style.css
@@ -92,9 +92,6 @@ section {
     section {
         margin: 5px 5px;
     }
-    h1, h2 {
-        text-align: center;
-    }
 }
 
 /* ------------------------ Navigation Bar ----------------------- */
